@@ -117,7 +117,7 @@ static gboolean process_from_client(struct client *c, struct line *l)
 		if (c->network->config->disable_cache || !client_try_cache(c, l)) {
 			/* Perhaps check for validity of input here ? It could save us some bandwidth 
 			 * to the server, though very unlikely to occur often */
-			network_send_line(c->network, c, l);
+			network_send_line(c->network, c, l, FALSE);
 		}
 	} else if(c->network->connection.state == NETWORK_CONNECTION_STATE_NOT_CONNECTED) {
 		char *msg;
