@@ -112,7 +112,7 @@ G_MODULE_EXPORT void network_select_next_server(struct network *n);
 G_MODULE_EXPORT gboolean disconnect_network(struct network *s);
 G_MODULE_EXPORT void clients_send(GList *clients, struct line *, const struct client *exception);
 G_MODULE_EXPORT void clients_send_args_ex(GList *clients, const char *hostmask, ...);
-G_MODULE_EXPORT gboolean network_send_line(struct network *s, struct client *c, const struct line *);
+G_MODULE_EXPORT gboolean network_send_line(struct network *s, struct client *c, const struct line *, gboolean);
 G_MODULE_EXPORT gboolean network_send_args(struct network *s, ...);
 G_MODULE_EXPORT void register_virtual_network(struct virtual_network_ops *);
 G_MODULE_EXPORT struct network *find_network(struct global *, const char *);
