@@ -47,6 +47,11 @@ Ctrlproxy 3.0.2 UNRELEASED
 		FNC, SAFELIST, USERIP, CNOTICE, KNOCK, VCHANNELS, WHOX, CALLERID,
 		ACCEPT, KEYLEN, USERLEN, HOSTLEN and SILENCE
 
+  INTERNALS
+
+    * Remove is_private from line struct (#12).
+		(patch by Emanuele Giaquinta <e.giaquinta@glauco.it>)
+
   PORTABILITY
 
     * Looks for check using pkg-config now.
